gorpcweb/gorpc-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: goapihaha
spec:
  host: goapi.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: showv1
  - name: v2
    labels:
      version: showv2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goapi-default-xixi
spec:
  hosts:
  - goapi.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: goapi.default.svc.cluster.local
        subset: v2
